--- a/configure.yml
+++ b/configure.yml
@@ -1,33 +1,27 @@
 DATASET:
-  NAME: "TripletData"
-  TRAIN_ROOT: "dataset/cv2/triplet.csv"
-  TEST_ROOT: "dataset/cv2/test_pairs.csv"
-  MATRIX_ROOT: "dataset/exp_data_LR.csv"
-  ADJ_ROOT: "dataset/adj_graph.csv"
-
+  NAME: TripletData
+  TRAIN_ROOT: data_IO/triplet.csv
+  TEST_ROOT: data_IO/test_pairs.csv
+  PRED_ROOT: data_IO/test_lr_pairs.csv
+  MATRIX_ROOT: data_IO/exp_data_LR.csv
+  ADJ_ROOT: data_IO/spatial_graph.csv
 MODEL:
-  NAME: "TripletGraphModel"
+  NAME: TripletGraphModel
   INPUT_DIM: 4000
   GRAPH_DIM: 4000
-  MLP_HID_DIMS: [200, 60, 20]
-  GRAPH_HID_DIMS: [200, 20, 5]
-  SAVE_PATH: 'checkpoint/triplet/'
-
+  MLP_HID_DIMS: [200,50,20]
+  GRAPH_HID_DIMS: [200,50,20]
+  SAVE_PATH: checkpoint/triplet/
 TRAIN:
-  LR: 1e-4
+  LR: 0.000100
   EPOCHS: 10
-  SAVE_PATH: "checkpoint/triplet/"
-  BATCH_SIZE: 512
-
+  SAVE_PATH: checkpoint/triplet/
+  BATCH_SIZE: 2048
 TEST:
-  SAVE_PATH: "checkpoint/triplet/final.pth"
-  BATCH_SIZE: 512
-  PRED: 'results/scadl_result.csv'
-  THRESHOLD: 0.9
-
+  SAVE_PATH: checkpoint/triplet/best_f1.pth
+  BATCH_SIZE: 2048
+  PRED: results/spaCI_predict.csv
+  EMB1: results/embed_ligand.csv
+  EMB2: results/embed_receptor.csv
+  THRESHOLD: 0.900000
 SEED: 10
-
-PREPROSS:
-  file_root: 'dataset/test_lr_pairs.csv'
-  save_dir: 'dataset/cv2'
-  split_threshold: 0.5
