--- a/conf.yml
+++ b/conf.yml
@@ -1,10 +1,10 @@
 DATASET:
   NAME: TripletData
-  TRAIN_ROOT: ../dataset/triplet.csv
-  TEST_ROOT: ../dataset/test_pairs.csv
-  PRED_ROOT: ../dataset/test_lr_pairs.csv
-  MATRIX_ROOT: ../dataset/exp_data_LR.csv
-  ADJ_ROOT: ../dataset/spatial_graph.csv
+  TRAIN_ROOT: dataset/triplet.csv
+  TEST_ROOT: dataset/test_pairs.csv
+  PRED_ROOT: dataset/test_lr_pairs.csv
+  MATRIX_ROOT: dataset/exp_data_LR.csv
+  ADJ_ROOT: dataset/spatial_graph.csv
 MODEL:
   NAME: TripletGraphModel
   INPUT_DIM: 4000
@@ -23,6 +23,6 @@ TEST:
   PRED: results/predict.csv
   EMB1: results/embed_ligand.csv
   EMB2: results/embed_receptor.csv
-  THRESHOLD: 0.900000
+  THRESHOLD: 0.9
 SEED: 10
 use_cuda: cuda:0
